k8s/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: preprod
  labels:
    name: preprod
    environment: preprod
    managed-by: kustomize
