k8s/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: license-server
  namespace: preprod
  labels:
    app: license-server
    component: licensing
    part-of: agencio
spec:
  type: ClusterIP
  selector:
    app: license-server
  ports:
    - name: http
      port: 3030
      targetPort: http
      protocol: TCP
